fix layout issue

--- a/src/components/animated/grid/grid.css
+++ b/src/components/animated/grid/grid.css
@@ -101,8 +101,8 @@
 .card-home-features-section {
   position: relative;
   /* background: var(--color-neutral-950); */
-  padding: var(--spacing-3xl) 0;
-  min-height: 100vh;
+  /* padding: var(--spacing-3xl) 0; */
+  /* min-height: 100vh; */
   overflow: hidden;
 }
 
@@ -565,7 +565,7 @@
   }
 
   .card-home-features-section {
-    padding: 6rem 0;
+    /* padding: 6rem 0; */
   }
 }
 
